# 3D-Graphics-Rendering-Cookbook-Second-Edition

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  deploy_deps.py
.cache/: .gitignore
.cache/out_textures_11/: .gitignore
.github/workflows/: c-cpp.yml
CMake/: CommonMacros.txt
Chapter01/01_CMake/: CMakeLists.txt
Chapter01/01_CMake/src/: main.cpp
Chapter01/02_GLFW/: CMakeLists.txt
Chapter01/02_GLFW/src/: main.cpp
Chapter01/03_Taskflow/: CMakeLists.txt
Chapter01/03_Taskflow/src/: main.cpp
Chapter01/04_GLSLang/: CMakeLists.txt
Chapter01/04_GLSLang/src/: main.cpp  main.frag  main.vert
Chapter01/05_BC7Compression/: CMakeLists.txt
Chapter01/05_BC7Compression/src/: main.cpp
Chapter02/01_Swapchain/: CMakeLists.txt
Chapter02/01_Swapchain/src/: main.cpp
Chapter02/02_HelloTriangle/: CMakeLists.txt
Chapter02/02_HelloTriangle/src/: main.cpp  main.frag  main.vert
Chapter02/03_GLM/: CMakeLists.txt
Chapter02/03_GLM/src/: main.cpp  main.frag  main.vert
Chapter02/04_Assimp/: CMakeLists.txt
Chapter02/04_Assimp/src/: main.cpp  main.vert
Chapter02/05_STB/: CMakeLists.txt
Chapter02/05_STB/src/: main.cpp  main.frag
Chapter03/01_Assimp/: CMakeLists.txt
Chapter03/01_Assimp/src/: main.cpp
Chapter03/01_ImGui/: CMakeLists.txt
Chapter03/02_STB/: CMakeLists.txt
Chapter03/02_STB/src/: main.cpp  main.frag  main.vert
Chapter03/02_TracyProfiler/: CMakeLists.txt
Chapter03/02_TracyProfiler/src/: main.cpp
Chapter03/03_FPS/: CMakeLists.txt
Chapter03/04_CubeMap/: CMakeLists.txt
Chapter03/04_CubeMap/src/: common.sp  main.cpp  main.frag  main.vert  skybox.frag  skybox.vert
Chapter03/05_Camera/: CMakeLists.txt
Chapter03/05_Camera/src/: main.cpp
Chapter03/06_DemoApp/: CMakeLists.txt
Chapter03/06_DemoApp/src/: main.cpp
Chapter04/01_ImGui/: CMakeLists.txt
Chapter04/01_ImGui/src/: main.cpp
Chapter04/01_MeshOptimizer/: CMakeLists.txt
Chapter04/01_MeshOptimizer/src/: main.cpp  main.geom  main.vert
Chapter04/02_TracyProfiler/: CMakeLists.txt
Chapter04/02_TracyProfiler/src/: main.cpp  main.frag  main.vert
Chapter04/02_VertexPulling/: CMakeLists.txt
Chapter04/02_VertexPulling/src/: main.cpp  main.frag  main.vert
Chapter04/03_FPS/: CMakeLists.txt
Chapter04/03_FPS/src/: main.cpp
Chapter04/03_MillionCubes/: CMakeLists.txt
Chapter04/03_MillionCubes/src/: main.cpp  main.vert
Chapter04/04_CubeMap/: CMakeLists.txt
Chapter04/04_CubeMap/src/: main.cpp  main.frag  main.vert  skybox.frag  skybox.vert
Chapter04/04_InstancedMeshes/: CMakeLists.txt
Chapter04/04_InstancedMeshes/src/: main.comp  main.cpp  main.frag  main.vert
Chapter04/05_Camera/: CMakeLists.txt
Chapter04/05_Camera/src/: main.cpp
Chapter04/05_Grid/: CMakeLists.txt
Chapter04/05_Grid/src/: main.cpp
Chapter04/06_DemoApp/: CMakeLists.txt
Chapter04/06_DemoApp/src/: main.cpp
Chapter04/06_Tessellation/: CMakeLists.txt
Chapter04/06_Tessellation/src/: common.sp  main.cpp  main.frag  (+3 more)
Chapter04/07_MeshRenderer/: CMakeLists.txt
Chapter04/08_ComputeTexture/: CMakeLists.txt
Chapter04/09_ComputeMesh/: CMakeLists.txt
Chapter05/01_MeshOptimizer/: CMakeLists.txt
Chapter05/02_VertexPulling/: CMakeLists.txt
Chapter05/03_MillionCubes/: CMakeLists.txt
Chapter05/04_InstancedMeshes/: CMakeLists.txt
Chapter05/05_Grid/: CMakeLists.txt
Chapter05/06_Tessellation/: CMakeLists.txt
Chapter05/07_MeshRenderer/: CMakeLists.txt
Chapter05/08_ComputeTexture/: CMakeLists.txt
Chapter05/09_ComputeMesh/: CMakeLists.txt
Chapter06/01_Unlit/: CMakeLists.txt
Chapter06/02_BRDF_LUT/: CMakeLists.txt
Chapter06/03_FilterEnvmap/: CMakeLists.txt
Chapter06/03_FilterEnvmap/src/: main.cpp  main.frag  main.vert
Chapter06/04_MetallicRoughness/: CMakeLists.txt
Chapter06/05_SpecularGlossiness/: CMakeLists.txt
Chapter07/01_Clearcoat/: CMakeLists.txt
Chapter07/02_Sheen/: CMakeLists.txt
Chapter07/03_Transmission/: CMakeLists.txt
Chapter07/04_Volume/: CMakeLists.txt
Chapter07/05_IOR/: CMakeLists.txt
Chapter07/06_Specular/: CMakeLists.txt
Chapter07/07_EmissiveStrength/: CMakeLists.txt
Chapter07/08_AnalyticalLight/: CMakeLists.txt
Chapter08/: SceneUtils.h  VKMesh08.h
Chapter08/01_DescriptorIndexing/: CMakeLists.txt
Chapter08/02_SceneGraph/: CMakeLists.txt
Chapter08/03_LargeScene/: CMakeLists.txt
Chapter09/01_AnimationPlayer/: CMakeLists.txt
Chapter09/02_Skinning/: CMakeLists.txt
Chapter09/03_Morphing/: CMakeLists.txt
Chapter09/04_AnimationBlending/: CMakeLists.txt
Chapter09/05_ImportLights/: CMakeLists.txt
Chapter09/06_ImportCameras/: CMakeLists.txt
Chapter09/08_ImportLights/: CMakeLists.txt
Chapter09/09_ImportCameras/: CMakeLists.txt
Chapter10/: Bistro.h  Skybox.h
Chapter10/01_OffscreenRendering/: CMakeLists.txt
Chapter10/02_ShadowMapping/: CMakeLists.txt
Chapter10/03_MSAA/: CMakeLists.txt
Chapter10/04_SSAO/: CMakeLists.txt
Chapter10/05_HDR/: CMakeLists.txt
Chapter10/06_HDR_Adaptation/: CMakeLists.txt
Chapter11/: VKMesh11.h  VKMesh11Lazy.h
Chapter11/01_CullingCPU/: CMakeLists.txt
Chapter11/02_CullingGPU/: CMakeLists.txt
Chapter11/03_DirectionalShadows/: CMakeLists.txt
Chapter11/04_OIT/: CMakeLists.txt
Chapter11/05_LazyLoading/: CMakeLists.txt
Chapter11/06_FinalDemo/: CMakeLists.txt
data/: CMakeLists.txt  brdfLUT.ktx  immenstadter_horn_2k_IrradianceMap.ktx  immenstadter_horn_2k_irradiance.ktx  piazza_bologni_1k_irradiance.ktx
data/meshes/orrery/: scene.gltf
data/shaders/: AlphaTest.sp  Blur.comp  Grid.frag  Grid.vert  GridCalculation.h  GridParameters.h  Quad.frag  Quad.vert  QuadFlip.vert  Shadow.sp  UtilsPBR.sp
data/shaders/gltf/: PBR.sp  animation.comp  common.sp  common_material.sp  inputs.frag  inputs.vert  main.frag  main.vert
shared/: CMakeLists.txt  Camera.h  Graph.h  HelpersGLFW.cpp  HelpersGLFW.h  LineCanvas.cpp  LineCanvas.h  Tonemap.h  Utils.cpp  Utils.h  UtilsAnim.cpp  UtilsAnim.h  UtilsCubemap.cpp  UtilsCubemap.h  UtilsFPS.h  UtilsGLTF.cpp  UtilsGLTF.h  UtilsMath.h  VulkanApp.cpp  VulkanApp.h
shared/Scene/: MergeUtil.cpp  MergeUtil.h  Scene.cpp  Scene.h  VtxData.cpp  VtxData.h
(+124 files in other folders)
